<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:background="@drawable/pet_layout_shape"
    android:clickable="true"
    android:id="@+id/task_editor_layout"
    tools:context=".ui.task.TaskEditorFragment">

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_shape"
        android:text="X"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="@dimen/text_normal_buttons_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="Will change"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="@dimen/text_titles2_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/renameTask"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_shape"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/paletteSoftBlue"
        android:textSize="@dimen/text_titles2_font_size"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Editar" />

    <Button
        android:id="@+id/buttonEditTask"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/button_shape"
        android:text="@string/button_name"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="@dimen/text_small_buttons_font_size"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="328dp"
        android:layout_height="382dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="prioridad"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_font_size" />

            <TextView
                android:id="@+id/taskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="Vencimiento"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_font_size" />

            <TextView
                android:id="@+id/taskCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="categoría"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_font_size" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginStart="225dp"
                android:layout_marginTop="-120dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:entries="@array/priority_options"
                android:prompt="@string/priority_prompt"
                android:textAlignment="center"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="225dp"
                android:layout_marginTop="7dp"
                android:textSize="@dimen/text_small_buttons_font_size"
                android:background="@drawable/button_shape"
                android:text="@string/date_name"
                android:textColor="@color/paletteDarkBlue" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginStart="225dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:entries="@array/category_options"
                android:prompt="@string/category_prompt"
                android:textAlignment="center"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size"/>

            <TextView
                android:id="@+id/subtasksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/subtasks_title"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_titles2_font_size" />

            <LinearLayout
                android:id="@+id/subtasksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <EditText
                android:id="@+id/inputSubTaskName"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_shape"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/paletteSoftBlue"
                android:textSize="@dimen/text_titles2_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Nueva subtarea..."></EditText>

            <Button
                android:id="@+id/buttonAddSubTask"
                android:layout_width="152dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:text="@string/button_addSubTask"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonRemoveSubTasks"
                android:layout_width="152dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:text="@string/button_deleteSubTasks"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/annotationsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/annotations_title"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_titles2_font_size" />

            <LinearLayout
                android:id="@+id/annotationList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"></LinearLayout>

            <EditText
                android:id="@+id/inputAnnotation"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/button_shape"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="5"
                android:singleLine="false"
                android:textColor="@color/paletteSoftBlue"
                android:textSize="@dimen/text_small_font_size"
                tools:text="@string/annotation_message"></EditText>

            <Button
                android:id="@+id/buttonAddAnnotations"
                android:layout_width="151dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:text="Añadir anotación"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/estimatedTimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/estimated_time_title"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_titles2_font_size" />

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="152dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_shape"
                android:text="@string/button_addTime"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPomodoro"
                android:layout_width="152dp"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/button_pomodoro"
                android:textColor="@color/paletteDarkBlue"
                android:textSize="@dimen/text_small_buttons_font_size" />
        </LinearLayout>
    </ScrollView>

    <TimePicker
        android:id="@+id/timePickerEstimatedTime"
        android:layout_width="302dp"
        android:layout_height="313dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/pet_layout_shape"
        android:clickable="false"
        android:textColor="@color/paletteDarkBlue"
        android:timePickerMode="spinner"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmitEstimatedTime"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/button_shape"
        android:clickable="false"
        android:text="@string/estimated_time_setup"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="@dimen/text_small_buttons_font_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/timePickerEstimatedTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_task_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendar_task_date"
        android:layout_width="302dp"
        android:layout_height="313dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CalendarView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_view"
        android:layout_width="302dp"
        android:layout_height="313dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>