<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paletteBackground">

    <TextView
        android:id="@+id/placeholderView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="Pick the ball"
        android:textSize="44sp"
        android:textColor="@color/paletteDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholderView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Mueve el vaso y evita que las pelotas caigan"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/paletteDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView3" />

    <Button
        android:id="@+id/maze_btn_start"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/button2_shape"
        android:textColor="@color/paletteDarkBlue"
        android:text="@string/games_start_button"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView4" />

    <Button
        android:id="@+id/maze_btn_close"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button2_shape"
        android:textColor="@color/paletteDarkBlue"
        android:text="@string/games_back_button"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maze_btn_start" />

    <Button
        android:id="@+id/maze_btn_records"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/paletteSoftBlue"
        android:text="@string/games_records_button"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maze_btn_close" />

</androidx.constraintlayout.widget.ConstraintLayout>