<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paletteBackground">

    <TextView
        android:id="@+id/placeholderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="Shoot'em all"
        android:textSize="44sp"
        android:textColor="@color/paletteDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholderView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Dispara a los enemigos y consigue 20 puntos para ganar"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/paletteDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView" />

    <Button
        android:id="@+id/shooter_btn_start"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button2_shape"
        android:text="@string/games_start_button"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView2" />

    <Button
        android:id="@+id/shooter_btn_close"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button2_shape"
        android:text="@string/games_back_button"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shooter_btn_start" />

    <Button
        android:id="@+id/shooter_btn_records"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button3_shape"
        android:text="@string/games_records_button"
        android:textColor="@color/paletteDarkBlue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shooter_btn_close"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>